@@ -37,10 +37,7 @@ namespace RedVentures.Bot_O_Mat.API.Services
             await _botOMatContext.SaveChangesAsync();
         }
 
-        public async Task<Robot> GetRobot(int Id)
-        {
-            return await _botOMatContext.Robots.FindAsync(Id);
-        }
+        public async Task<Robot> GetRobot(int Id) => await _botOMatContext.Robots.FindAsync(Id);
 
         public async Task<IEnumerable<Robot>> GetRobotsBy(string Name, RobotType? Type, int Skip = 0)
         {
